<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/ic_person_black_24dp" />

        <item
            android:id="@+id/nav_orders"
            android:title="@string/nav_orders"
            android:icon="@drawable/ic_contact_mail_black_24dp" />

        <item
            android:id="@+id/nav_invite_friends"
            android:title="@string/nav_invite_friends"
            android:icon="@drawable/ic_contact_mail_black_24dp" />

        <item
            android:id="@+id/nav_promo"
            android:title="@string/nav_promo"
            android:icon="@drawable/ic_contact_mail_black_24dp" />


        <item android:title="@string/others">

            <menu>
                <item
                    android:id="@+id/nav_get_help"
                    android:title="@string/nav_get_help" />

                <item
                    android:id="@+id/nav_privacy_policy"
                    android:title="@string/nav_privacy_policy" />

                <item
                    android:id="@+id/nav_contact_us"
                    android:title="@string/nav_contact_us" />
            </menu>

        </item>



    </group>

</menu>